--- a/Productos cerveza/style.css
+++ b/Productos cerveza/style.css
@@ -6,6 +6,7 @@
 
 body {
     height: 100vh;
+    background: linear-gradient(#020506, #265864, #000000);
 }
 
 nav {
@@ -58,11 +59,10 @@ nav {
 
 .menu-horizontal>li {
     display: inline-block;
-    position: relative;
     text-align: center;
 }
 
-.menu-horizontal>li::before {
+/* .menu-horizontal>li::before {
     content: "";
     height: 5px;
     width: 0%;
@@ -75,15 +75,14 @@ nav {
 
 .menu-horizontal>li:hover::before {
     width: 100%;
-}
+} */
 
 .menu-vertical>li {
     display: inline-block;
     width: 154px;
-    position: relative;
 }
 
-.menu-vertical>li::before {
+/* .menu-vertical>li::before {
     content: "";
     height: 5px;
     width: 0%;
@@ -96,7 +95,7 @@ nav {
 
 .menu-vertical>li:hover::before {
     width: 100%;
-}
+} */
 
 .nav-logos {
     width: 100%;
@@ -109,7 +108,54 @@ nav {
     /* position: sticky;
     top: 0; */
 }
-
+.buscar{
+    position: relative;
+    padding: 5px;
+}
+.buscar input{
+    width: 0px;
+    height: 40px;
+    padding: 0 20px;
+    font-size: 15px;
+    color: #000000;
+    outline: none;
+    border: 1px solid silver;
+    border-radius: 30px;
+    transition: all 0.6s ease;
+    margin-top: -3px;
+}
+.img{
+    width: 40px;
+}
+.bt{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #000000;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-top: -5px;
+}
+.bt img{
+    transition: all .7s ease;
+}
+.buscar:hover img{
+    transform: rotate(-360deg);
+}
+.buscar:hover input{
+    width: 200px;
+}
+.buscar input:focus{
+    width: 200px;
+}
 .log {
     width: 200px;
     cursor: pointer;
@@ -122,10 +168,13 @@ nav {
 }
 
 .nav-logos ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: 12%;
 }
 
-.imag {
+.img {
     width: 40px;
 }
 
@@ -149,43 +198,126 @@ nav {
     -webkit-text-stroke: 0.5px #AF2727;
 }
 
-
 header {
     position: fixed;
     top: 0;
     z-index: 1;
     width: 100%;
 }
-
-/* diseños del cuerpo de slider de imagenes*/
-
-img {
-    max-width: 100%;
+.sub-nav {
+    position: fixed;
+    top: 9%;
+    right: 12%;
+    width: 250px;
+    max-height: 0px;
+    overflow: hidden;
+    background: linear-gradient(#020506, #265864, #000000);
+    border-radius: 15px;
+    transition: max-height 0.5s;
+    color: #fdfdfc;
+    font: italic normal bold 18px/15px Segoe UI;
 }
 
-.interaction {
-    position: relative;
-    max-width: 100%;
+.sub-nav.open-menu {
+    max-height: 400px;
+}
+
+.sub-menu {
     width: 100%;
-    margin-top: 0.47%;
+    padding: 20px;
+}
+
+.info {
+    text-align: center;
+}
+
+.info h3 {
+    font-weight: 500;
+}
+
+.info img {
+    width: 60px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.sub-menu hr {
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background: #dfaa2d;
+    margin: 10px 0 10px;
+}
+
+.sub-menu-link img {
+    width: 40px;
+    background: #dda217;
+    border-radius: 50%;
+    padding: 8px;
+    margin-right: 15px;
+}
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #ffffff;
+    margin: 12px 0;
+    font: italic normal bold 15px/15px Segoe UI;
+}
+
+.sub-menu-link p {
+    width: 100%;
+}
+
+.sub-menu-link span {
+    font-size: 22px;
+    transition: transform 0.5s;
+}
+
+.sub-menu-link:hover span {
+    transform: translateX(5px);
+}
+
+.sub-menu-link:hover p {
+    font-weight: 600;
+    transform: translateY(5px);
+}
+
+.clic {
+    cursor: pointer;
+}
+/*----------------------------------------------------------------*/
+.imagen {
+    width: 200px;
+    height: 107px;
+    margin-left: 85px;
+    margin-top: -15px;
+}
+
+.container-all {
+    margin-top: 10rem;
+    position: relative;
+    max-width: 10000px;
+    width: 100%;
     border-radius: 6px;
     overflow: hidden;
     box-shadow: 0px 31px 37px -7px rgba(0, 0, 0, 0.48);
 }
 
-.slider {
-    margin-top: 9rem;
+.slide {
     display: flex;
     transform: translate3d(0, 0, 0);
     transition: all 600ms;
-    animation-name: autoplay;
+    animation: autoplay;
     animation-duration: 15s;
     animation-direction: alternate;
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
+
 }
 
-.item {
+.item-slide {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -194,7 +326,7 @@ img {
     max-width: 100%;
 }
 
-.pagina {
+.pagination {
     position: absolute;
     bottom: 20px;
     left: 0;
@@ -205,11 +337,11 @@ img {
     width: 100%;
 }
 
-.item-pagina {
+.pagination-item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid #ffffff;
+    border: 2px solid white;
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -221,96 +353,123 @@ img {
     transition: all 300ms;
 }
 
-.item-pagina:hover {
+.pagination-item:hover {
     transform: scale(3);
 }
 
-.item-pagina img {
+.pagination-item img {
     display: inline-block;
     max-width: none;
     height: 100%;
     transform: scale(1);
     opacity: 0;
     transition: all 300ms;
+
 }
 
-.item-pagina:hover img {
+.pagination-item:hover img {
     opacity: 1;
     transform: scale(1);
 }
 
-input[id="1"]:checked~.slider {
+input[id="1"]:checked~.slide {
     animation: none;
     transform: translate3d(0, 0, 0);
 }
 
-input[id="1"]:checked~.pagina .item-pagina[for="1"] {
-    background: #ffffff;
+input[id="1"]:checked~.pagination .pagination-item[for="1"] {
+    background: #fff;
 }
 
-input[id="2"]:checked~.slider {
+input[id="2"]:checked~.slide {
     animation: none;
     transform: translate3d(calc(-100% * 1), 0, 0);
 }
 
-input[id="2"]:checked~.pagina .item-pagina[for="2"] {
-    background: #ffffff;
+input[id="2"]:checked~.pagination .pagination-item[for="2"] {
+    background: #fff;
 }
 
-input[id="3"]:checked~.slider {
+input[id="3"]:checked~.slide {
     animation: none;
     transform: translate3d(calc(-100% * 2), 0, 0);
 }
 
-input[id="3"]:checked~.pagina .item-pagina[for="3"] {
-    background: #ffffff;
+input[id="3"]:checked~.pagination .pagination-item[for="3"] {
+    background: #fff;
 }
-
-input[id="4"]:checked~.slider {
+input[id="4"]:checked~.slide {
     animation: none;
     transform: translate3d(calc(-100% * 3), 0, 0);
 }
 
-input[id="4"]:checked~.pagina .item-pagina[for="4"] {
-    background: #ffffff;
+input[id="4"]:checked~.pagination .pagination-item[for="4"] {
+    background: #fff;
 }
-
-input[id="5"]:checked~.slider {
+input[id="5"]:checked~.slide {
     animation: none;
     transform: translate3d(calc(-100% * 4), 0, 0);
 }
 
-input[id="5"]:checked~.pagina .item-pagina[for="5"] {
-    background: #ffffff;
+input[id="5"]:checked~.pagination .pagination-item[for="5"] {
+    background: #fff;
+}
+input[id="6"]:checked~.slide {
+    animation: none;
+    transform: translate3d(calc(-100% * 5), 0, 0);
+}
+
+input[id="6"]:checked~.pagination .pagination-item[for="6"] {
+    background: #fff;
 }
 
 @keyframes autoplay {
-    20% {
+    16.6% {
         transform: translate3d(calc(-100% * 0), 0, 0);
     }
 
-    40% {
+    33.2% {
         transform: translate3d(calc(-100% * 1), 0, 0);
     }
 
-    60% {
+    49.8% {
         transform: translate3d(calc(-100% * 2), 0, 0);
     }
 
-    80% {
+    66.4% {
         transform: translate3d(calc(-100% * 3), 0, 0);
     }
 
-    100% {
+    83% {
         transform: translate3d(calc(-100% * 4), 0, 0);
+    }
+
+    100% {
+        transform: translate3d(calc(-100% * 5), 0, 0);
     }
 }
 
-/* diseños de los container de los productos*/
+/*----------------------------------------------------------------*/
 
-.container-img,
-.container-img1,
-.container-img2 {
+.imagenes {
+    margin-top: -70px;
+    margin-left: 85%;
+}
+
+.titulo h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+    color: aliceblue;
+    font: italic normal bold 35px/35px Segoe UI;
+    text-align: center;
+    background-color: #265864;
+}
+
+.container1,
+.container2,
+.container3 {
     width: 100%;
     height: 600px;
     display: flex;
@@ -318,81 +477,64 @@ input[id="5"]:checked~.pagina .item-pagina[for="5"] {
     justify-content: space-between;
 }
 
-.container-img {
+.container1 {
     background-color: #265864;
 }
 
-.container-img1 {
+.container2 {
     background-color: #172429;
 }
 
-.container-img2 {
+.container3 {
     position: relative;
     background: linear-gradient(#132c33, #000000);
     box-shadow: 0px 20px 14px -8px #1C4049;
 }
 
-.imagen img {
-    width: 700%;
-}
-
-.imagen,
-.imagen2,
-.text1 {
-    margin-left: 5.8%;
-}
-
-.text,
-.text2 {
-    width: 28%;
-    margin-right: 15%;
-    color: #ffffff;
-    text-align: center;
-    font: italic normal 600 35px/67px Segoe UI;
-    letter-spacing: 0px;
-    opacity: 1;
-    line-height: normal;
-}
-
-.imagen2 img,
-.imagen1 img {
-    width: 800px;
-}
-
-.text1 {
+.listados {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 25%;
-    height: 50%;
-    color: #ffffff;
+    height: 70%;
+}
+
+.lista {
+    width: 50%;
+    height: 40%;
     text-align: center;
-    font: italic normal 600 25px/67px Segoe UI;
+    font: italic normal bold 30px/67px Sitka Banner;
     letter-spacing: 0px;
+    line-height: normal;
+    color: #FFFFFF;
     opacity: 1;
-    margin-left: 12.5%;
 }
 
-.text1 h1 {
-    line-height: 50px;
-}
-
-.text1 p {
-    margin-top: 15px;
-    line-height: 35px;
-}
-
-.text1 a {
-    padding: 5px 20px;
-    background-color: #DC8B12;
-    text-decoration: none;
+.lista h4 {
     text-align: center;
-    font: italic normal 600 25px/30px Segoe UI;
+    font: italic normal bold 35px/67px Sitka Banner;
     letter-spacing: 0px;
-    color: #0A0A0A;
+    line-height: normal;
+    color: #FFFFFF;
     opacity: 1;
-    border-radius: 15px;
 }
 
-/*diseños para el pie de pagina*/
+.logo-img {
+    width: 50%;
+}
 
+.logo-img img {
+    width: 100%;
+    height: 100%;
+}
+.logo-img img:hover {
+    transform: scale(1.1);
+}
+.marg {
+    margin: auto;
+}
+
+/*----------------------------------------------------------------*/
 footer {
     width: 100%;
     height: 170px;
