--- a/Producto whisky/whisky.css
+++ b/Producto whisky/whisky.css
@@ -28,7 +28,7 @@ nav {
 }
 
 .menu-horizontal>li:hover {
-    background-color: #d2830ea3;
+    background-color: #cf810bde;
 }
 
 .menu-vertical {
@@ -44,7 +44,7 @@ nav {
 }
 
 .menu-vertical li:hover {
-    background-color: #d2830ea3;
+    background-color: #cf810bde;
 }
 
 .menu-vertical li a {
@@ -57,11 +57,10 @@ nav {
 
 .menu-horizontal>li {
     display: inline-block;
-    position: relative;
     text-align: center;
 }
 
-.menu-horizontal>li::before {
+/* .menu-horizontal>li::before {
     content: "";
     height: 5px;
     width: 0%;
@@ -74,15 +73,14 @@ nav {
 
 .menu-horizontal>li:hover::before {
     width: 100%;
-}
+} */
 
 .menu-vertical>li {
     display: inline-block;
     width: 154px;
-    position: relative;
 }
 
-.menu-vertical>li::before {
+/* .menu-vertical>li::before {
     content: "";
     height: 5px;
     width: 0%;
@@ -95,7 +93,7 @@ nav {
 
 .menu-vertical>li:hover::before {
     width: 100%;
-}
+} */
 
 .nav-logos {
     width: 100%;
@@ -105,6 +103,52 @@ nav {
     align-items: center;
     justify-content: space-between;
     background-color: #020506;
+}
+.buscar{
+    position: relative;
+    padding: 5px;
+}
+.buscar input{
+    width: 0px;
+    height: 40px;
+    padding: 0 20px;
+    font-size: 15px;
+    color: #000000;
+    outline: none;
+    border: 1px solid silver;
+    border-radius: 30px;
+    transition: all 0.6s ease;
+    margin-top: -3px;
+}
+
+.bt{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #000000;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-top: -5px;
+}
+.bt img{
+    transition: all .7s ease;
+}
+.buscar:hover img{
+    transform: rotate(-360deg);
+}
+.buscar:hover input{
+    width: 200px;
+}
+.buscar input:focus{
+    width: 200px;
 }
 
 .log {
@@ -119,6 +163,9 @@ nav {
 }
 
 .nav-logos ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: 12%;
 }
 
@@ -152,7 +199,87 @@ header {
     z-index: 1;
     width: 100%;
 }
+.sub-nav {
+    position: fixed;
+    top: 9%;
+    right: 12%;
+    width: 250px;
+    max-height: 0px;
+    overflow: hidden;
+    background: linear-gradient(#020506, #265864, #000000);
+    border-radius: 15px;
+    transition: max-height 0.5s;
+    color: #fdfdfc;
+    font: italic normal bold 18px/15px Segoe UI;
+}
 
+.sub-nav.open-menu {
+    max-height: 400px;
+}
+
+.sub-menu {
+    padding: 20px;
+}
+
+.info {
+    text-align: center;
+}
+
+.info h3 {
+    font-weight: 500;
+}
+
+.info img {
+    width: 60px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.sub-menu hr {
+    border: 0;
+    height: 1px;
+    background: #dfaa2d;
+    margin: 5px 0 5px;
+}
+
+.sub-menu-link img {
+    width: 25px;
+    background: #dda217;
+    border-radius: 50%;
+    padding: 8px;
+    margin-right: 15px;
+}
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #ffffff;
+    margin: 12px 0;
+    font: italic normal bold 15px/15px Segoe UI;
+}
+
+.sub-menu-link p {
+    width: 100%;
+}
+
+.sub-menu-link span {
+    font-size: 22px;
+    transition: transform 0.5s;
+}
+
+.sub-menu-link:hover span {
+    transform: translateX(5px);
+}
+
+.sub-menu-link:hover p {
+    font-weight: 600;
+    transform: translateY(5px);
+}
+
+.clic {
+    cursor: pointer;
+}
 .container {
     width: 100%;
     height: 665.83px;
@@ -248,6 +375,9 @@ header {
 .img-whisky img {
     width: 100%;
     height: 100%;
+}
+.img-whisky img:hover{
+    transform: scale(1.1);
 }
 .marg {
     margin: auto;
