--- a/RegistroProveedores/style.css
+++ b/RegistroProveedores/style.css
@@ -67,10 +67,9 @@ nav {
 
 .menu-horizontal>li {
     display: inline-block;
-    position: relative;
     text-align: center;
 }
-
+/* 
 .menu-horizontal>li::before {
     content: "";
     height: 5px;
@@ -84,15 +83,14 @@ nav {
 
 .menu-horizontal>li:hover::before {
     width: 100%;
-}
+} */
 
 .menu-vertical>li {
     display: inline-block;
     width: 154px;
-    position: relative;
 }
 
-.menu-vertical>li::before {
+/* .menu-vertical>li::before {
     content: "";
     height: 5px;
     width: 0%;
@@ -105,7 +103,7 @@ nav {
 
 .menu-vertical>li:hover::before {
     width: 100%;
-}
+} */
 
 .nav-logos {
     width: 100%;
@@ -131,6 +129,9 @@ nav {
 }
 
 .nav-logos ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: 12%;
 }
 
@@ -163,6 +164,89 @@ header {
     z-index: 1;
     width: 100%;
 }
+.sub-nav {
+    position: fixed;
+    top: 9%;
+    right: 12%;
+    width: 250px;
+    max-height: 0px;
+    overflow: hidden;
+    background: linear-gradient(#020506, #265864, #000000);
+    border-radius: 15px;
+    transition: max-height 0.5s;
+    color: #fdfdfc;
+    font: italic normal bold 18px/15px Segoe UI;
+}
+
+.sub-nav.open-menu {
+    max-height: 400px;
+}
+
+.sub-menu {
+    width: 100%;
+    padding: 20px;
+}
+
+.info {
+    text-align: center;
+}
+
+.info h3 {
+    font-weight: 500;
+}
+
+.info img {
+    width: 60px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.sub-menu hr {
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background: #dfaa2d;
+    margin: 10px 0 10px;
+}
+
+.sub-menu-link img {
+    width: 40px;
+    background: #dda217;
+    border-radius: 50%;
+    padding: 8px;
+    margin-right: 15px;
+}
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #ffffff;
+    margin: 12px 0;
+    font: italic normal bold 15px/15px Segoe UI;
+}
+
+.sub-menu-link p {
+    width: 100%;
+}
+
+.sub-menu-link span {
+    font-size: 22px;
+    transition: transform 0.5s;
+}
+
+.sub-menu-link:hover span {
+    transform: translateX(5px);
+}
+
+.sub-menu-link:hover p {
+    font-weight: 600;
+    transform: translateY(5px);
+}
+
+.clic {
+    cursor: pointer;
+}
 .formulario{
     width: 70%;
     height: 70%;
@@ -177,7 +261,7 @@ header {
     height: 15%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
 }
@@ -202,29 +286,45 @@ header {
     font-family: 'Segoe UI';
     color:white;
     font-style: oblique;
-    font-size: 15px;
-    margin-right: 15%;
-    margin-top: 10px;
+    font-size: 20px;
+    margin: auto;
+}
+.buscador{
+    width: 20%;
+    height: 35px;
+    margin: auto;
+}
+.form-bucar{
+    width: 100%;
+    height: 35px;
+    margin: 0;
+    padding: 0;
 }
 .buscar{
-    width: 160px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 25px;
-    font-size: 14px;
-    background-color: white;
-    background-image: url(img/lupa.png);
-    background-size: 20px;
-    background-position: 8px 10px; 
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 30px;
-    transition: width 0.4s ease-in-out; 
-    margin-right: 30px;
-    margin-top: 10px;
-}  
-
-.buscar input[type="text"]:focus{
     width: 100%;
+    height: 35px;
+    border-radius: 25px;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.8;
+}
+.buscar input {
+    width: 85%;
+    height: 35px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    padding: 0 10px;
+    font: italic normal bold 18px/18px Segoe UI;
+    border: none;
+    outline: none;
+    color: rgb(88, 88, 88);
+}
+.buscar img {
+    margin-left: 10px;
+    padding-right: 5px;
+    border-right: 2px solid rgb(163, 161, 161);
 }
 .requisitos{
     width: 100%;
@@ -233,6 +333,19 @@ header {
     grid-template-rows: repeat(2, 50px);
     gap: 30px;
 }
+.alerta{
+    width: 70%;
+    height: 35px;
+    color: #926c0b;
+    background: #fff3c8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    text-align: center;
+    font: italic normal bold 15px/15px Segoe UI;
+    border-radius: 5px;
+}
 .codigo,.nombre,.telefono,.direccion,.correo,.producto{
     display: flex;
     align-items: center;
@@ -240,28 +353,32 @@ header {
 }
 label{
     margin: auto;
-    font: italic normal bold 18px/35px Segoe UI;
+    font: italic normal bold 15px/30px Segoe UI;
+    line-height: normal;
     color: white;
 }
-.codigo input[type="text"],.nombre input[type="text"],.telefono input[type="text"],.direccion input[type="text"],.correo input[type="text"],.producto input[type="text"]{
+.codigo input[type="text"],.nombre input[type="text"],.telefono input[type="text"],.direccion input[type="text"],.correo input[type="text"],.producto select{
     width: 70%;
     height: 70%;
-    font-size: 16px;
-    font: italic normal normal 18px/35px Segoe UI;
+    font: italic normal normal 20px/35px Segoe UI;
     border-color: #c9af77;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 8px;
     opacity: 0.7;
 }
+.registrar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+}
 input[type="submit"]{
-    margin-top: 30px;
-    text-align: center;
-    margin-left: 45%;
-    padding: 5px 30px;
+    padding: 8px 30px;
+    font: normal normal 600 25px/31px Aristotelica Display Trial;
+    letter-spacing: 0px;
+    background-color: #DC8B12;
     border-radius: 25px;
     color: #703600;
-    font: normal normal 600 25px/31px Aristotelica Display Trial;
-    background-color: #DC8B12;
     border: none;
 } 
 form {
@@ -281,32 +398,65 @@ form {
 
 .tab {
     width: 98%;
-    height: 50%;
+    height: 270px;
+    max-height: 270px;
+    overflow-y: scroll;
     margin: auto;
-    margin-top: 15px;
+    margin-top: 20px;
 }
-
-table {
-    border-collapse: collapse;
-    width: 100%;
+.tab::-webkit-scrollbar{
+    width: 10px;
+    height: 10px;
+    background: #ffffff;
+}
+.tab::-webkit-scrollbar-thumb{
+    background: #703600;
     border-radius: 10px;
 }
+table {
+    width: 100%;
+    min-width: max-content;
+    border-collapse: collapse;
+    border-radius: 10px;
+    font: italic normal normal 18px/20px Segoe UI;
+}
 thead{
-   background: #DC8B12; 
-   
+   background: #DC8B12;
+   position: sticky;
+   top: 0;
+   z-index: 10;
+}
+tbody tr{
+    background: #ffffff;
+    opacity: 0.9;
+}
+tr:nth-child(even){
+    background: #ddd;
 }
 th{
     padding: 10px 15px;
     font-weight: 700;
+    text-align: center;
+    color: #703600;
 }
 td{
     padding: 10px 20px;
-    background-color:white ;
-    opacity: 0.7;
-    
+    text-align: center;
 }
 tbody tr:hover{
     background: #c9976b ;
-   
-    
+}
+.btn-warning {
+    padding: 2px 5px;
+    background: #fcc404;
+    border-radius: 5px;
+    margin-right: 2px;
+    color: #000000;
+}
+.btn-danger {
+    padding: 2px 8px;
+    background: #ca2434;
+    border-radius: 5px;
+    margin-left: 2px;
+    color: #ffffff;
 }
